<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CircleCircle</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="tongbu_contact">同步联系人</string>
    <string name="contactadd_title">添加联系人</string>
    <string name="contactedit_title">编辑联系人</string>
    <string name="contactinfo_title">联系人详情</string>
    <string name="groups_title">分组管理</string>
    
    <string name="save">保存</string>
    <string name="canel">取消</string>
    
    <string name="basicinfos">基本信息</string>
    <string name="contact_phone">电话</string>
    <string name="contatc_title">联系人</string>
    <string name="contact_email">email</string>
    <string name="otherinfos">其他信息</string>
    <string name="contact_im">QQ</string>
    <string name="contact_address">地址</string>
    <string name="contact_editgroup">分组</string>
    
    
    <string name="menuitem_addGroup">添加分组</string>
    <string name="menuitem_deleteGroup">删除分组</string>
    
    <string name="recent_call">最近通话</string>
 
    
    <string name="contact_edit">编辑</string>
    <string name="contact_delete">删除</string>
    <string name="message_title">短信</string>
    <string name="photo">头像</string>
	<string name="call">呼叫</string>
	<string name="delete">删除</string>
	<string name="receiver">收件人</string>
	
	<string name="new_message">新信息</string>
	
	<string name="mes_hint">请输入短信内容</string>
	
	<string name="center_title">个人中心</string>
	<string name="send_sms_web">网页发短信：</string>
	
	
</resources>
