<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/contitle_layout"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/maintab_toolbar_bg"
        android:paddingLeft="10dp" >

        <TextView
            android:id="@+id/contactedit_title"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="7"
            android:gravity="center_vertical|left"
            android:text="@string/contactadd_title"
            android:textColor="#FFFFFF"

            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/confinish_imgbut"
            android:layout_width="10dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/maintab_toolbar_bg"
            android:src="@drawable/sym_keyboard_ok" />
    </LinearLayout>
    
    <RelativeLayout
        android:id="@+id/basic_info"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >

       <ImageButton
           android:id="@+id/contact_photo"
           android:layout_height="120dp"
           android:layout_width="120dp"
           android:layout_marginTop="5dp"
           android:layout_marginLeft="10dp"
       	   android:layout_marginRight="5dp"  
       	   android:src="@drawable/add_photo" 
           />
       <EditText
           android:id="@+id/edittext_name"
           android:layout_width="fill_parent"
           android:layout_height="50dp"
           android:layout_toRightOf="@id/contact_photo"
           android:layout_alignTop="@id/contact_photo"
           android:layout_marginTop="35dp"
           android:layout_marginLeft="5dp"
       	   android:layout_marginRight="10dp"

       	   android:layout_gravity="center_vertical"
           android:background="@drawable/search_bar_edit_normal" 
       	  />
        
       <TextView
           android:id="@+id/basicinfo"
           android:layout_width="fill_parent"
           android:layout_height="20dp"
           android:layout_marginTop="14dp"
           android:layout_below="@id/contact_photo" 
           android:text="@string/basicinfos"
           />
       
       <ImageView
           android:id="@+id/imageview_line"
           android:layout_width="fill_parent"
           android:layout_height="5dp"
           android:layout_below="@id/basicinfo"
           android:src="@drawable/gray_line2"

           />

         <TextView 
	        android:id="@+id/textview_phone"
	        android:layout_width="60dp"
	        android:layout_height="40dp"
	        android:layout_below="@id/imageview_line"
	        android:layout_marginLeft="10dp"
	        android:layout_marginTop="10dp"
	        android:text="@string/contact_phone"
	        android:background="@drawable/search_bar_edit_normal"
        />

	    <EditText
	        android:id="@+id/edittext_phone"
	        android:layout_toRightOf="@id/textview_phone"
	        android:layout_width="fill_parent"
	        android:layout_height="40dp"
	
	        android:layout_below="@id/imageview_line"
	        android:layout_alignTop="@id/textview_phone"
	        android:layout_marginRight="10dp"
	        android:background="@drawable/search_bar_edit_normal" 
	        />
    
	    <TextView 
	        android:id="@+id/textview_email"
	        android:layout_width="60dp"
	        android:layout_height="40dp"
	        android:layout_below="@id/textview_phone"
	        android:layout_alignLeft="@id/textview_phone"
	        android:layout_marginTop="10dp"
	        android:text="@string/contact_email"
	        android:background="@drawable/search_bar_edit_normal"
	        />

	    <EditText
	        android:id="@+id/edittext_email"
	        android:layout_toRightOf="@id/textview_email"
	        android:layout_width="fill_parent"
	        android:layout_height="40dp"
	        android:layout_below="@id/edittext_phone"
	        android:layout_alignLeft="@id/edittext_phone"
	        android:layout_alignTop="@id/textview_email"
	
	        android:layout_marginRight="10dp"
	        android:background="@drawable/search_bar_edit_normal" 
	        />
	    
	    <TextView
           android:id="@+id/otherinfo"
           android:layout_width="fill_parent"
           android:layout_height="20dp"
           android:layout_marginTop="14dp"
           android:layout_below="@id/textview_email" 
           android:text="@string/otherinfos"
           />
       
       <ImageView
           android:id="@+id/imageview_line2"
           android:layout_width="fill_parent"
           android:layout_height="5dp"
           android:layout_below="@id/otherinfo"
           android:src="@drawable/gray_line2"

           />
	    
	    
	     <TextView 
	        android:id="@+id/textview_im"
	        android:layout_width="60dp"
	        android:layout_height="40dp"
	        android:layout_below="@id/imageview_line2"
	        android:layout_alignLeft="@id/textview_email"
	        android:layout_marginTop="10dp"
	        android:text="@string/contact_im"
	        android:background="@drawable/search_bar_edit_normal"
	        />

	    <EditText
	        android:id="@+id/edittext_im"
	        android:layout_toRightOf="@id/textview_im"
	        android:layout_width="fill_parent"
	        android:layout_height="40dp"
	        android:layout_below="@id/imageview_line2"
	        android:layout_alignLeft="@id/edittext_email"
	        android:layout_alignTop="@id/textview_im"
	
	        android:layout_marginRight="10dp"
	        android:background="@drawable/search_bar_edit_normal" 
	        />
	    
	    <TextView 
	        android:id="@+id/textview_address"
	        android:layout_width="60dp"
	        android:layout_height="40dp"
	        android:layout_below="@id/textview_im"
	        android:layout_alignLeft="@id/textview_im"
	        android:layout_marginTop="10dp"
	        android:text="@string/contact_address"
	        android:background="@drawable/search_bar_edit_normal"
	        />

	    <EditText
	        android:id="@+id/edittext_address"
	        android:layout_toRightOf="@id/textview_address"
	        android:layout_width="fill_parent"
	        android:layout_height="40dp"
	        android:layout_below="@id/edittext_email"
	        android:layout_alignLeft="@id/edittext_email"
	        android:layout_alignTop="@id/textview_address"
	
	        android:layout_marginRight="10dp"
	        android:background="@drawable/search_bar_edit_normal" 
	        />
        

</RelativeLayout>

    
    
   
</LinearLayout>